# data_analysis_system

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/csv_data/: analysis_data.csv
